@@ -17458,6 +17458,8 @@ logfile cache:</p></div>
 
 <div class='toclevel4'><a href='#_show_long_plugin_output'>show_long_plugin_output</a></div>
 
+<div class='toclevel4'><a href='#_status_color_background'>status_color_background</a></div>
+
 <div class='toclevel4'><a href='#_show_modified_attributes'>show_modified_attributes</a></div>
 
 <div class='toclevel4'><a href='#_show_host_attempts'>show_host_attempts</a></div>
@@ -18206,6 +18208,14 @@ Choose between popup, inline and off</p></div>
 <div class="literalblock">
 <div class="content">
 <pre><tt>show_long_plugin_output = popup</tt></pre>
+</div></div>
+<h4 id="_status_color_background">status_color_background</h4>
+<div class="paragraph"><p>Color complete status line with status colour or just the status
+itself.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>status_color_background=0</tt></pre>
 </div></div>
 <h4 id="_show_modified_attributes">show_modified_attributes</h4>
 <div class="paragraph"><p>Show if a host / service has modified attributes.</p></div>
@@ -19648,7 +19658,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-12 16:54:20 CEST
+Last updated 2013-03-14 21:29:48 CEST
 </div>
 </div>
 </body>
