@@ -197,6 +197,10 @@ group_paging_grid     = *5,  10, 50,  all
 # choose between popup, inline and off
 show_long_plugin_output = popup
 
+# color complete status line with status colour or just the status
+# itself.
+status_color_background = 0
+
 # on which event should the comments / downtime or
 # longpluginout popup show up
 # usefull values are onclick or onmouseover
